# rssnest

./: .gitignore  README.md
golang/: README.md  all.sh  castsTest.json  example_conf.json  fileStore.go  fileStore_test.go  ftpTarget.go  httpSource.go  linuxComp.sh  propergate.go  propergate_test.go  raspberryCompile.sh  rcomp.sh  rssnest.go  shortener.go
golang/config/: getConfig.go
golang/docs/: index.html  index.html.old  newData.json  prices.json
golang/docs/js/: main.js
golang/feeds/: goldMoney.go  harvester.go  source.go  store.go  storeNewContent.go
golang/web/: package.json
golang/web/public/: errors.html  go.html  index.html  what.html
rustynest/: Cargo.toml  castsTest.json  example_conf.json  rs.db  rssnest.db  testbase
rustynest/src/: config_utils.rs  feeds_utils.rs  main.rs  store.rs
