[package]
name = "rustynest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitiond at
# https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# This feature will enable the 'vendored' feature of the 'openssl' crate
# It's useful if you want to provide a single feature flag for your users
# that controls whether openssl is vendored or not.
vendored-openssl = ["openssl/vendored"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
text-colorizer = "1"
regex = "1"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
serde = { version ="1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rss = "2.0.1"
tokio = { version = "1.20.1", features = ["full"] } 
sqlite = "0.27.0"
chrono = "0.4"
log = "0.4.17"
stderrlog = "0.5.3"
structopt = "0.3.26"
